# bodymoving

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
.github/workflows/: cmake.yml
